--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,7 +113,7 @@ footer {
 	color: lightgray;
 	padding: 10px;
 	text-align: center;
-	width: 100vw;
+	width: 100％;
 }
 
 .fa-envelope,
